[NO JIRA] Fix rating alignment on PR failing conditions

--- a/server/sonar-web/src/main/js/apps/overview/styles.css
+++ b/server/sonar-web/src/main/js/apps/overview/styles.css
@@ -165,11 +165,6 @@
   font-size: var(--bigFontSize);
 }
 
-.overview-quality-gate-condition-value span {
-  display: inline-block;
-  vertical-align: top;
-}
-
 /*
  * Animations
  */
